--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Lexend:wght@100..900&display=swap"
     rel="stylesheet">
   <style>
     .custom-font {
       font-family: "Lexend", sans-serif;
     }
-    .service_li{
+
+    .service_li {
       cursor: pointer;
     }
   </style>
@@ -30,7 +33,7 @@
     class="flex flex-wrap sm:justify-start sticky top-0 h-fit sm:flex-nowrap w-full bg-white text-sm py-3 shadow w-50 lg:container mx-auto  rounded-2xl">
     <nav class="max-w-[85rem] w-full relative mx-auto px-4 flex flex-wrap basis-full items-center justify-between">
       <a class="sm:order-1 flex-none text-xl lg:text-2xl font-semibold  focus:outline-none focus:opacity-80 custom-font"
-        href="#">Hi I'm
+        href="index.html">Hi I'm
         Sunil</a>
       <div class="sm:order-3 flex items-center gap-x-2">
         <div class="py-2 px-3 menu border rounded-md lg:hidden md:hidden cursor-pointer">
@@ -71,12 +74,13 @@
                 End Developer</span> with enhanced skills in Graphic Designing, Video Editing & 2D Illustation Arts</p>
           </div>
           <div class="flex gap-2">
+            <a href="https://wa.me/8790549591" target="_blank"
+              class="lg:w-6/12 lg:p-1 h-12 border-green-400 bg-green-100  text-green-600 hover:bg-green-300 hover:text-green-800 hover:border-green-500 lg:h-14 w-11/12 border items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md">
+              WhatsApp <i class="bi bi-whatsapp"></i>
+            </a>
+
             <button
-              class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 border contact_location items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
-              type="button">Hire
-              me <span class="material-symbols-outlined">message</span> </button>
-            <button
-              class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 bg-blue-500 text-white border resume_download items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
+              class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 border-blue-500 bg-blue-100 text-blue-500 hover:bg-blue-300 hover:text-blue-800 hover:border-blue-500 border resume_download items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
               type="button">Resume <span class="material-symbols-outlined">download</span> </button>
           </div>
           <div class="flex gap-3">
