--- a/src/projects.html
+++ b/src/projects.html
@@ -36,7 +36,7 @@
         class="flex flex-wrap sm:justify-start sticky top-0 h-fit sm:flex-nowrap w-full bg-white text-sm py-3 shadow w-50 lg:container mx-auto  rounded-2xl">
         <nav class="max-w-[85rem] w-full relative mx-auto px-4 flex flex-wrap basis-full items-center justify-between">
             <a class="sm:order-1 flex-none text-xl lg:text-2xl font-semibold  focus:outline-none focus:opacity-80 custom-font"
-                href="#">Hi I'm
+                href="index.html">Hi I'm
                 Sunil</a>
             <div class="sm:order-3 flex items-center gap-x-2">
                 <div class="py-2 px-3 menu border rounded-md lg:hidden md:hidden cursor-pointer">
@@ -77,12 +77,13 @@
                             Illustation Arts</p>
                     </div>
                     <div class="flex gap-2">
+                        <a href="https://wa.me/8790549591" target="_blank"
+                            class="lg:w-6/12 lg:p-1 h-12 border-green-400 bg-green-100  text-green-600 hover:bg-green-300 hover:text-green-800 hover:border-green-500 lg:h-14 w-11/12 border items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md">
+                            WhatsApp <i class="bi bi-whatsapp"></i>
+                        </a>
+
                         <button
-                            class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 border contact_location items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
-                            type="button">Hire
-                            me <span class="material-symbols-outlined">message</span> </button>
-                        <button
-                            class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 bg-blue-500 text-white border resume_download items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
+                            class="lg:w-6/12 lg:p-1 h-12 lg:h-14 w-11/12 border-blue-500 bg-blue-100 text-blue-500 hover:bg-blue-300 hover:text-blue-800 hover:border-blue-500 border resume_download items-center justify-center flex gap-1 shadow-sm p-2 text-lg font-semibold rounded-md"
                             type="button">Resume <span class="material-symbols-outlined">download</span> </button>
                     </div>
                     <div class="flex gap-3">
@@ -119,7 +120,7 @@
                     <h1 class="text-2xl font-semibold">Work in Progress !</h1>
                     <a href="index.html">
                         <button type="submit"
-                            class="inline-flex  mt-2 text-lg items-center rounded-md justify-center gap-x-2 rounded-mdpx-3 py-2 px-4 text-center bg-blue-500 font-medium text-white transition hover:bg-gray-900 hover:text-white  focus:outline-none focus:ring disabled:pointer-events-none disabled:opacity-50">
+                            class="inline-flex  mt-2 text-lg items-center rounded-md justify-center gap-x-2 rounded-mdpx-3 py-2 px-4 text-center bg-black font-medium text-white transition hover:bg-gray-900 hover:text-white  focus:outline-none focus:ring disabled:pointer-events-none disabled:opacity-50">
                             <span class="text-lg text-nowrap">Back to home</span>
                             <span class="material-symbols-outlined">home</span>
                         </button>
