--- a/src/projects.html
+++ b/src/projects.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="mx-auto pt-6">
+<body class="lg:mx-28 pt-6">
     <header
         class="flex flex-wrap sm:justify-start sticky top-0 h-fit sm:flex-nowrap w-full bg-white text-sm py-3 shadow w-50 lg:container mx-auto  rounded-2xl">
         <nav class="max-w-[85rem] w-full relative mx-auto px-4 flex flex-wrap basis-full items-center justify-between">
