--- a/src/contact.html
+++ b/src/contact.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body class="mx-auto pt-6">
+<body class="lg:mx-28 pt-6">
 
     <header
         class="flex flex-wrap sm:justify-start sticky top-0 h-fit sm:flex-nowrap w-full bg-white text-sm py-3 shadow w-50 lg:container mx-auto  rounded-2xl">
