--- a/src/about.html
+++ b/src/about.html
@@ -177,6 +177,62 @@
 
                     <div class="grid gap-6">
                         <h3 class="text-2xl font-bold text-dark">
+                            Certifications & Achivements
+                        </h3>
+                        <div class="w-full flex flex-col gap-6">
+                            <div class="flex gap-3 border-b-2 py-3">
+                                <a href="" target="_blank" class="border">
+                                    <img src="./assets/images/certificates/freecodecamp-resposive-design.png"
+                                        width="400px" alt="">
+                                </a>
+                                <div class="">
+                                    <p class="text-lg uppercase font-bold">freeCodeCamp Responsive Web Design</p>
+                                    <p class="mb-3 text-base font-normal">Outcomes : HTML, CSS, Responsive Design, Color
+                                        Theory, Media Query, Flexbox, 5+ Live Projects </p>
+                                    <div class="flex justify-between items-center w-full">
+                                        <p><i class="bi bi-patch-check text-green-600"></i>&nbsp; Verified - <a href=""
+                                                title="course link" class="text-blue-600 font-medium">freeCodeCamp</a>
+                                        </p>
+                                        <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
+                                                class="bi bi-arrow-up-right"></i></a>
+
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="flex gap-3 border-b-2 py-3">
+                                <a href="" target="_blank">
+                                    <img src="./assets/images/certificates/freecodecamp-js.png" alt="">
+                                </a>
+                                <div class="">
+                                    <p class="text-lg uppercase font-bold">Visual Communication for Digital media</p>
+                                    <p class="mb-3 text-base font-normal">Outcomes : Design Principles, Elements of
+                                        Design,
+                                        Semantics, Visual Communication, color Theory </p>
+                                    <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
+                                            class="bi bi-arrow-up-right"></i></a>
+                                </div>
+                            </div>
+                            <div class="flex gap-3 border-b-2 py-3">
+                                <a href="" target="_blank">
+                                    <img src="./assets/images/certificates/future-badge.png" alt="">
+                                </a>
+                                <div class="">
+                                    <p class="text-lg uppercase font-bold">Visual Communication for Digital media</p>
+                                    <p class="mb-3 text-base font-normal">Outcomes : Design Principles, Elements of
+                                        Design,
+                                        Semantics, Visual Communication, color Theory </p>
+                                    <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
+                                            class="bi bi-arrow-up-right"></i></a>
+                                </div>
+                            </div>
+                            <div class="py-3">
+                                <p class="text-center text-gray-400 font-semibold">More Coming on the Way</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="grid gap-6">
+                        <h3 class="text-2xl font-bold text-dark">
                             Skills I Offer
                         </h3>
                         <div class="grid grid-cols-1 lg:grid-cols-2 w-full gap-6">
