--- a/src/about.html
+++ b/src/about.html
@@ -29,6 +29,10 @@
                 justify-content: center;
                 align-items: center;
             }
+
+            .view_btn_div {
+                width: 100%;
+            }
         }
     </style>
 
@@ -180,53 +184,174 @@
                             Certifications & Achivements
                         </h3>
                         <div class="w-full flex flex-col gap-6">
-                            <div class="flex gap-3 border-b-2 py-3">
-                                <a href="" target="_blank" class="border">
-                                    <img src="./assets/images/certificates/freecodecamp-resposive-design.png"
-                                        width="400px" alt="">
-                                </a>
-                                <div class="">
-                                    <p class="text-lg uppercase font-bold">freeCodeCamp Responsive Web Design</p>
-                                    <p class="mb-3 text-base font-normal">Outcomes : HTML, CSS, Responsive Design, Color
-                                        Theory, Media Query, Flexbox, 5+ Live Projects </p>
-                                    <div class="flex justify-between items-center w-full">
-                                        <p><i class="bi bi-patch-check text-green-600"></i>&nbsp; Verified - <a href=""
-                                                title="course link" class="text-blue-600 font-medium">freeCodeCamp</a>
-                                        </p>
-                                        <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
-                                                class="bi bi-arrow-up-right"></i></a>
+                            <div class="gap-3 border-b-2 py-3 ">
+                                <div
+                                    class=" flex lg:flex-row gap-6 lg:gap-0  flex-col w-full justify-between py-2 items-center">
+                                    <div class="w-full">
+                                        <a target="_blank"
+                                            href="https://www.freecodecamp.org/certification/fcc1eda2e27-bd95-4202-831c-3c7e5c61ea95/responsive-web-design">
+                                            <p class="text-2xl uppercase text-balance font-bold"> <i
+                                                    class="bi bi-patch-check text-black"></i> &nbsp;Responsive Web
+                                                Design
+                                            </p>
+                                        </a>
+                                        <div class="flex gap-3 mt-3 flex-wrap">
+                                            <div class="bg-purple-100 text-purple-600 px-2 py-1 text-sm w-fit">
+                                                #certificate
+                                            </div>
+                                            <div class="bg-yellow-100 text-yellow-600 px-2 py-1 text-sm w-fit">
+                                                <a href="www.freecodecamp.org">#freecodecamp</a>
+                                            </div>
+                                            <div class="bg-blue-100 text-blue-600 px-2 py-1 text-sm w-fit">
+                                                Achieved on Jan 2023
+                                            </div>
+                                        </div>
 
+                                    </div>
+                                    <div class="flex flex-col view_btn_div items-center gap-3">
+                                        <a href="https://www.freecodecamp.org/certification/fcc1eda2e27-bd95-4202-831c-3c7e5c61ea95/responsive-web-design"
+                                            class="font-semibold text-center hover:text-blue-500 w-full  bg-black text-white px-10 py-2 text-lg   text-nowrap h-fit rounded-md"
+                                            target="_blank">View <i class="bi bi-arrow-up-right"></i></a>
+                                        <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/"
+                                            target="_blank"
+                                            class="text-blue-500 flex items-center gap-2 hover:text-blue-800 focus:text-blue-800">Course
+                                            Link <i class="bi bi-book"></i></a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="flex gap-3 border-b-2 py-3">
-                                <a href="" target="_blank">
-                                    <img src="./assets/images/certificates/freecodecamp-js.png" alt="">
-                                </a>
-                                <div class="">
-                                    <p class="text-lg uppercase font-bold">Visual Communication for Digital media</p>
-                                    <p class="mb-3 text-base font-normal">Outcomes : Design Principles, Elements of
-                                        Design,
-                                        Semantics, Visual Communication, color Theory </p>
-                                    <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
-                                            class="bi bi-arrow-up-right"></i></a>
+
+                            <div class="gap-3 border-b-2 py-3 ">
+                                <div
+                                    class=" flex lg:flex-row gap-6 lg:gap-0  flex-col w-full justify-between py-2 items-center">
+                                    <div class="w-full">
+                                        <a href="https://www.freecodecamp.org/certification/fcc1eda2e27-bd95-4202-831c-3c7e5c61ea95/javascript-algorithms-and-data-structures"
+                                            target="_blank">
+                                            <p class="text-2xl uppercase text-balance font-bold"><i
+                                                    class="bi bi-patch-check text-black"></i> &nbsp;Js Alogritms & Data
+                                                Structures </p>
+                                        </a>
+                                        <div class="flex gap-3 mt-3 flex-wrap">
+                                            <div class="bg-purple-100 text-purple-600 px-2 py-1 text-sm w-fit">
+                                                #certificate
+                                            </div>
+                                            <div class="bg-yellow-100 text-yellow-600 px-2 py-1 text-sm w-fit">
+                                                #freecodecamp
+                                            </div>
+                                            <div class="bg-blue-100 text-blue-600 px-2 py-1 text-sm w-fit">
+                                                Achieved on Mar 2023
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="flex flex-col view_btn_div items-center gap-3 lg:w-fit sm:w-full">
+                                        <a href="https://www.freecodecamp.org/certification/fcc1eda2e27-bd95-4202-831c-3c7e5c61ea95/javascript-algorithms-and-data-structures"
+                                            class="font-semibold w-full text-center hover:text-blue-500 bg-black text-white px-10 py-2 text-lg   text-nowrap h-fit rounded-md"
+                                            target="_blank">View <i class="bi bi-arrow-up-right"></i></a>
+                                        <a href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/"
+                                            target="_blank"
+                                            class="text-blue-500 flex items-center gap-2 hover:text-blue-800 focus:text-blue-800">Course
+                                            Link <i class="bi bi-book"></i></a>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="flex gap-3 border-b-2 py-3">
-                                <a href="" target="_blank">
-                                    <img src="./assets/images/certificates/future-badge.png" alt="">
-                                </a>
-                                <div class="">
-                                    <p class="text-lg uppercase font-bold">Visual Communication for Digital media</p>
-                                    <p class="mb-3 text-base font-normal">Outcomes : Design Principles, Elements of
-                                        Design,
-                                        Semantics, Visual Communication, color Theory </p>
-                                    <a href="" class="font-semibold hover:text-blue-500" target="_blank">View <i
-                                            class="bi bi-arrow-up-right"></i></a>
+
+                            <div class="gap-3 border-b-2 py-3 ">
+                                <div
+                                    class=" flex lg:flex-row gap-6 lg:gap-0  flex-col w-full justify-between py-2 items-center">
+                                    <div class="w-full">
+                                        <a href="./assets/images/certificates/nptel.pdf" target="_blank">
+                                            <p class="text-2xl uppercase text-balance font-bold"><i
+                                                    class="bi bi-patch-check text-black"></i> Visual Communication </p>
+                                        </a>
+                                        <div class="flex gap-3 mt-3 flex-wrap">
+                                            <div class="bg-purple-100 text-purple-600 px-2 py-1 text-sm w-fit">
+                                                #certificate
+                                            </div>
+                                            <div class="bg-yellow-100 text-yellow-600 px-2 py-1 text-sm w-fit">
+                                                #NPTEL
+                                            </div>
+                                            <div class="bg-blue-100 text-blue-600 px-2 py-1 text-sm w-fit">
+                                                Achieved on Oct 2024
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="flex flex-col view_btn_div items-center gap-3 lg:w-fit sm:w-full">
+                                        <a href="./assets/images/certificates/nptel.pdf"
+                                            class="font-semibold w-full text-center hover:text-blue-500 bg-black text-white px-10 py-2 text-lg   text-nowrap h-fit rounded-md"
+                                            target="_blank">View <i class="bi bi-arrow-up-right"></i></a>
+                                        <a href="https://onlinecourses.nptel.ac.in/noc20_ar15/preview" target="_blank"
+                                            class="text-blue-500 flex items-center gap-2 hover:text-blue-800 focus:text-blue-800">Course
+                                            Link <i class="bi bi-book"></i></a>
+                                    </div>
                                 </div>
                             </div>
+
+                            <div class="gap-3 border-b-2 py-3 ">
+                                <div
+                                    class=" flex lg:flex-row gap-6 lg:gap-0  flex-col w-full justify-between py-2 items-center">
+                                    <div class="w-full">
+                                        <a href="./assets/images/certificates/future-badge.png" target="_blank">
+                                            <p class="text-2xl uppercase text-balance font-bold"><i
+                                                    class="bi bi-patch-check text-black"></i> future of ai </p>
+                                        </a>
+                                        <div class="flex gap-3 mt-3 flex-wrap">
+                                            <div class="bg-purple-100 text-purple-600 px-2 py-1 text-sm w-fit">
+                                                #badge
+                                            </div>
+                                            <div class="bg-yellow-100 text-yellow-600 px-2 py-1 text-sm w-fit">
+                                                #NASSCOM
+                                            </div>
+                                            <div class="bg-blue-100 text-blue-600 px-2 py-1 text-sm w-fit">
+                                                Achieved on Jan 2023
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="flex flex-col view_btn_div items-center gap-3 lg:w-fit sm:w-full">
+                                        <a href="./assets/images/certificates/future-badge.png"
+                                            class="font-semibold w-full text-center hover:text-blue-500 bg-black text-white px-10 py-2 text-lg   text-nowrap h-fit rounded-md"
+                                            target="_blank">View <i class="bi bi-arrow-up-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="gap-3 border-b-2 py-3 ">
+                                <div
+                                    class=" flex lg:flex-row gap-6 lg:gap-0  flex-col w-full justify-between py-2 items-center">
+                                    <div class="w-full">
+                                        <a href="https://dev.to/safikumar00" target="_blank">
+                                            <p class="text-2xl uppercase text-balance font-bold"><i
+                                                    class="bi bi-patch-check text-black"></i> Frontend Challenge
+                                                Completion
+                                                Badge
+                                            </p>
+                                        </a>
+                                        <div class="flex gap-3 mt-3 flex-wrap">
+                                            <div class="bg-purple-100 text-purple-600 px-2 py-1 text-sm w-fit">
+                                                #badge
+                                            </div>
+                                            <div class="bg-yellow-100 text-yellow-600 px-2 py-1 text-sm w-fit">
+                                                #DEV
+                                            </div>
+                                            <div class="bg-blue-100 text-blue-600 px-2 py-1 text-sm w-fit">
+                                                Achieved on Apr 2024
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                    <div class="flex flex-col view_btn_div items-center gap-3 lg:w-fit sm:w-full">
+                                        <a href="https://dev.to/safikumar00"
+                                            class="font-semibold w-full text-center hover:text-blue-500 bg-black text-white px-10 py-2 text-lg   text-nowrap h-fit rounded-md"
+                                            target="_blank">View <i class="bi bi-arrow-up-right"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
                             <div class="py-3">
-                                <p class="text-center text-gray-400 font-semibold">More Coming on the Way</p>
+                                <p class="text-center text-gray-400 font-semibold">This is not the end....</p>
                             </div>
                         </div>
                     </div>
@@ -285,21 +410,21 @@
                         </h3>
                         <div class="grid grid-cols-2 lg:grid-cols-3 gap-3 lg:gap-6">
                             <a href="https://www.dreamrupee.com "><img src="./assets/images/brand-logos/1.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.keytoloans.com"><img src="./assets/images/brand-logos/2.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.lendingind.com/"><img src="./assets/images/brand-logos/4.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://www.lowcredit.in/"><img src="./assets/images/brand-logos/5.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://tejkunitsolutions.com/"><img src="./assets/images/brand-logos/7.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3"></a>
                             <a href="https://rummyspark.in/"><img src="./assets/images/brand-logos/6.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
                             <a href="https://turbopaisa.com/"><img src="./assets/images/brand-logos/8.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3 bg-gray-500"></a>
                             <a href="https://salesera.net/"><img src="./assets/images/brand-logos/9.png" alt=""
-                                    class="p-1 border h-24 shadow-md inline-flex rounded-lg lg:mx-3 "></a>
+                                    class="p-1 border h-24 inline-flex rounded-lg lg:mx-3 "></a>
 
                         </div>
 
