--- a/src/about.html
+++ b/src/about.html
@@ -176,6 +176,16 @@
                                 title="jQuery">
                             <img src="./assets/images/tools/vscode.jpg" class="h-10 w-10   rounded-lg" alt=""
                                 title="Visual Studio Code">
+                            <img src="./assets/images/tools/reactjs.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="React JS">
+                            <img src="./assets/images/tools/nextjs.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Next JS">
+                            <img src="./assets/images/tools/nodejs.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Node JS">
+                            <img src="./assets/images/tools/npm.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Node Package Manager">
+                            <img src="./assets/images/tools/git.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Git & Git hub">
                         </div>
                     </div>
 
