--- a/src/index.html
+++ b/src/index.html
@@ -217,6 +217,46 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/reactjs.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                React JS
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/nodejs.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Node JS
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/nextjs.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Next JS
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/npm.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Node Packge Manager
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/git.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Git & Github
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
                 <img src="./assets/images/tools/html_logo.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
