--- a/src/about.html
+++ b/src/about.html
@@ -186,6 +186,10 @@
                                 title="Node Package Manager">
                             <img src="./assets/images/tools/git.jpg" class="h-10 w-10   rounded-lg" alt=""
                                 title="Git & Git hub">
+                            <img src="./assets/images/tools/chatgpt.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Chat-GPT">
+                            <img src="./assets/images/tools/codium.jpg" class="h-10 w-10   rounded-lg" alt=""
+                                title="Codeium">
                         </div>
                     </div>
 
