--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,22 @@
             </div>
             <div class="text-center">
               <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/chatgpt.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Chat-GPT
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
+                <img src="./assets/images/tools/codium.jpg" alt="" class="h-12 w-12 rounded-md">
+              </div>
+              <p class="mt-1 text-base font-medium text-dark">
+                Codeium
+              </p>
+            </div>
+            <div class="text-center">
+              <div class="grid place-content-center rounded-lg bg-light p-1 dark:bg-dark-2">
                 <img src="./assets/images/tools/tailwindcsss.jpg" alt="" class="h-12 w-12 rounded-md">
               </div>
               <p class="mt-1 text-base font-medium text-dark">
